--- a/src/styles/first-screen.scss
+++ b/src/styles/first-screen.scss
@@ -43,16 +43,16 @@
   .screen.first{
     height: 100vh;
   }
-  .experience {
-    flex-direction: column;
-    height: 200vh;
+  .first-screen-photo{
+    width: 300px;
+    height: 300px;
+    background-image: url("../assets/logo-main_300x300.png");
   }
-  .languages-zone{
-    width: 100%;
-    margin-bottom: 20px;
+  .first-screen-name{
+    font-size: 2.5rem;
   }
-  .skills-zone{
-    width: 100%;
-    margin-bottom: 20px;
+  .first-screen-quote {
+    font-size: 1.5rem;
   }
+
 }
