--- a/src/styles/about-me.scss
+++ b/src/styles/about-me.scss
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
+  flex-wrap: wrap;
 
 }
 .about-me-txt{
@@ -29,7 +29,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: right;
-  width: 35%;
+  width: 30%;
   height: 90%;
 }
 .about-me-photo1{
@@ -40,5 +40,18 @@
   border-radius: 10%;
   background: $base-color4;
   outline: 2px solid $base-color3;
+
+}
+
+@media screen and (max-width: 1000px) {
+  .about-me-photo{
+    width: 100%;
+    height: 70%;
+  }
+  .about-me-txt{
+    width: 100%;
+    font-size: 2rem;
+  }
+
 
 }
