--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -17,3 +17,11 @@
   height: 10vh;
   color: $base-color2;
 }
+
+@media screen and (max-width: 1000px) {
+  .screen-text{
+    font-size: 3rem;
+  }
+
+
+}
