--- a/src/styles/about-me.css
+++ b/src/styles/about-me.css
@@ -45,6 +45,10 @@
     width: 100%;
     height: 70%;
   }
+  .about-me-photo1 {
+    width: 250px;
+    height: 250px;
+  }
   .about-me-txt {
     width: 100%;
     font-size: 2rem;
