--- a/src/styles/about-me.scss
+++ b/src/styles/about-me.scss
@@ -44,9 +44,14 @@
 }
 
 @media screen and (max-width: 1000px) {
+
   .about-me-photo{
     width: 100%;
     height: 70%;
+  }
+  .about-me-photo1{
+    width: 250px;
+    height: 250px;
   }
   .about-me-txt{
     width: 100%;
