--- a/src/styles/about-me.css
+++ b/src/styles/about-me.css
@@ -41,17 +41,23 @@
 }
 
 @media screen and (max-width: 1000px) {
-  .about-me-photo {
+  .about-me {
+    height: 100%;
     width: 100%;
-    height: 70%;
+    justify-content: center;
+  }
+  .about-me-photo {
+    width: 250px;
+    height: 250px;
   }
   .about-me-photo1 {
     width: 250px;
     height: 250px;
   }
   .about-me-txt {
-    width: 100%;
-    font-size: 2rem;
+    width: 90%;
+    height: 50%;
+    font-size: 1.5rem;
   }
 }
 
