--- a/src/styles/language.scss
+++ b/src/styles/language.scss
@@ -25,10 +25,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 8%;
+  width: 5vh;
   font-size: 2rem;
   border-radius: 50%;
   background:$base-color4;
   color:$base-color2;
 
+}
+@media screen and (max-width: 1000px) {
+  .language-txt{
+    font-size: 1.75rem;
+  }
+  .language-level{
+    font-size: 1.75rem;
+  }
 }
