--- a/src/styles/language.css
+++ b/src/styles/language.css
@@ -33,10 +33,11 @@
 
 @media screen and (max-width: 1000px) {
   .language-txt {
-    font-size: 1.3rem;
+    width: 60%;
+    font-size: 1.5rem;
   }
   .language-level {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
   }
 }
 
