--- a/src/styles/language.scss
+++ b/src/styles/language.scss
@@ -34,9 +34,10 @@
 }
 @media screen and (max-width: 1000px) {
   .language-txt{
-    font-size: 1.3rem;
+    width: 60%;
+    font-size: 1.5rem;
   }
   .language-level{
-    font-size: 1.3rem;
+    font-size: 1.5rem;
   }
 }
