--- a/src/styles/first-screen.css
+++ b/src/styles/first-screen.css
@@ -36,7 +36,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: "Fredoka One", cursive;
+  font-family: "Luckiest Guy", cursive;
   color: #CFDBD5;
 }
 
