--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -16,6 +16,7 @@
   width: 100vw;
   height: 10vh;
   color: $base-color2;
+  font-family: 'Fredoka One', cursive;
 }
 
 @media screen and (max-width: 1000px) {
