--- a/src/styles/skill.css
+++ b/src/styles/skill.css
@@ -9,6 +9,7 @@
   color: #242423;
   padding-left: 10px;
   border-radius: 10px;
+  font-family: "Luckiest Guy", cursive;
 }
 
 /*# sourceMappingURL=skill.css.map */
