--- a/src/styles/about-me.css
+++ b/src/styles/about-me.css
@@ -13,12 +13,14 @@
   margin: 10px;
   padding: 10px;
   font-size: 2.5rem;
-  color: #E8EDDF;
-  outline: 2px solid #F5CB5C;
+  color: #CFDBD5;
+  outline: 3px solid #F5CB5C;
   border-radius: 10px;
   width: 65%;
   height: 90%;
   background: #242423;
+  font-family: "Amaranth", sans-serif;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
 .about-me-photo {
@@ -35,9 +37,10 @@
   display: flex;
   width: 400px;
   height: 400px;
-  border-radius: 10%;
-  background: #242423;
-  outline: 2px solid #F5CB5C;
+  border-radius: 15%;
+  outline: 3px solid #F5CB5C;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  background-image: url("../assets/pic_about-me_400x400.png");
 }
 
 @media screen and (max-width: 1000px) {
@@ -53,6 +56,7 @@
   .about-me-photo1 {
     width: 250px;
     height: 250px;
+    background-image: url("../assets/pic_about-me_250x250.png");
   }
   .about-me-txt {
     width: 90%;
