--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -21,6 +21,7 @@
   font-size: 3rem;
   color: #E8EDDF;
   margin-bottom: 20px;
+  font-family: "Fredoka One", cursive;
 }
 
 .languages {
@@ -37,6 +38,7 @@
   font-size: 3rem;
   justify-content: center;
   color: #E8EDDF;
+  font-family: "Fredoka One", cursive;
 }
 
 .skills-zone {
@@ -45,6 +47,8 @@
   height: 100%;
   border-radius: 20px;
   background: #242423;
+  outline: 3px solid #F5CB5C;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
 .languages-zone {
@@ -53,6 +57,8 @@
   height: 100%;
   border-radius: 20px;
   background: #242423;
+  outline: 3px solid #F5CB5C;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
 @media screen and (max-width: 1000px) {
