--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -8,12 +8,15 @@
   height: 80%;
 
 
+
 }
 .skills{
   display: flex;
   flex-direction: column;
   font-size: 2rem;
   color:$base-color2;
+
+
 }
 .skills-text{
   display: flex;
@@ -22,6 +25,7 @@
   font-size: 3rem;
   color:$base-color2;
   margin-bottom: 20px;
+  font-family: 'Fredoka One', cursive;
 }
 .languages{
   display: flex;
@@ -36,6 +40,7 @@
   font-size: 3rem;
   justify-content: center;
   color:$base-color2;
+  font-family: 'Fredoka One', cursive;
 }
 
 .skills-zone{
@@ -44,6 +49,8 @@
   height: 100%;
   border-radius: 20px;
   background:$base-color4;
+  outline: 3px solid $base-color3;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 
 }
 .languages-zone{
@@ -52,6 +59,9 @@
   height: 100%;
   border-radius: 20px;
   background:$base-color4;
+  outline: 3px solid $base-color3;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+
 }
 
 
