--- a/src/styles/first-screen.scss
+++ b/src/styles/first-screen.scss
@@ -35,8 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Fredoka One', cursive;
-
+  font-family: 'Luckiest Guy', cursive;
   color:$base-color1;
 }
 @media screen and (max-width: 1000px) {
