--- a/src/styles/first-screen.scss
+++ b/src/styles/first-screen.scss
@@ -46,6 +46,8 @@
     width: 300px;
     height: 300px;
     background-image: url("../assets/logo-main_300x300.png");
+    margin-top: 5vh;
+    margin-bottom: 7.5vh;
   }
   .first-screen-name{
     font-size: 1.75rem;
