--- a/src/styles/skill.css
+++ b/src/styles/skill.css
@@ -12,4 +12,10 @@
   font-family: "Luckiest Guy", cursive;
 }
 
+@media screen and (max-width: 1000px) {
+  .skill {
+    font-size: 1.5rem;
+  }
+}
+
 /*# sourceMappingURL=skill.css.map */
