--- a/src/styles/skill.scss
+++ b/src/styles/skill.scss
@@ -13,3 +13,10 @@
   font-family: 'Luckiest Guy', cursive;
 
 }
+
+@media screen and (max-width: 1000px) {
+  .skill{
+    font-size: 1.5rem;
+  }
+
+}
