--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,3 +1,40 @@
+.project {
+  width: 475px;
+  height: 350px;
+  margin: 0 2.5% 0 2.5%;
+  border-radius: 5%;
+  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
 
+.project1 {
+  display: flex;
+  user-select: none;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  color: #F5CB5C;
+  opacity: 0;
+  border-radius: 5%;
+  transition: 0.3s;
+  width: 100%;
+  height: 100%;
+  background: rgba(36, 36, 35, 0.97);
+  outline: 3px solid #F5CB5C;
+  font-family: "Luckiest Guy", cursive;
+}
+
+.project1:hover {
+  opacity: 1;
+}
+
+@media screen and (max-width: 1000px) {
+  .project {
+    margin: 2.5% 0 2.5% 0;
+    box-shadow: none;
+  }
+}
 
 /*# sourceMappingURL=project.css.map */
