--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -1,1 +1,37 @@
 @import "./variables";
+
+.projects{
+  height: 65vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100vw;
+  justify-content: center;
+}
+.projects-text-bottom{
+  height: 15vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  font-size: 2.5rem;
+  color:$base-color2;
+  font-family: 'Amaranth', sans-serif;
+}
+
+@media screen and (max-width: 1000px) {
+  .screen.proj {
+    height: 150vh;
+  }
+  .projects{
+    flex-direction: column;
+    height: 800px;
+  }
+  .projects-text-bottom{
+    margin-top: 5vh;
+    font-size: 1.5rem;
+
+
+  }
+
+}
