--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -30,6 +30,12 @@
   opacity: 1;
 }
 
+.project-link {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
+
 @media screen and (max-width: 1000px) {
   .project {
     margin: 2.5% 0 2.5% 0;
