--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -29,6 +29,11 @@
 .project1:hover{
   opacity: 1;
 }
+.project-link{
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+}
 
 
 @media screen and (max-width: 1000px) {
