--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -5,10 +5,11 @@
 }
 
 .app {
-  height: 100vh;
-  max-height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
+  height: 100%;
+  width: 100%;
+  overflow-x: clip;
+  overflow-y: auto;
+  background: #333533;
 }
 
 /*# sourceMappingURL=app.css.map */
