--- a/src/styles/first-screen.scss
+++ b/src/styles/first-screen.scss
@@ -22,15 +22,18 @@
   justify-content: center;
   height: 10vh;
   margin-top: 3vh;
-  width: 100vw;
+  width: 100%;
   font-size: 5rem;
   font-family: 'Fredoka One', cursive;
   color:$base-color2;
 
 }
+.screen.first{
+  margin-top: 5vh;
+}
 .first-screen-quote{
   height: 12vh;
-  font-size: 3rem;
+  font-size: 2.5rem;
   width: 100vw;
   display: flex;
   align-items: center;
