--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,11 +1,21 @@
 @import "./variables";
 .header{
-  height: 75px;
-  width: 100vw;
+  height: 60px;
+  width: 100%;
+  position: fixed;
+  transition: 0.25s;
   background-color:$base-color4;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  user-select: none;
+}
+.header.active{
+  top: 0px;
+}
+.header.hidden{
+  z-index: 40;
+  top: -60px;
 }
 .photo-header{
   height: 50px;
