--- a/src/styles/screen.scss
+++ b/src/styles/screen.scss
@@ -1,19 +1,19 @@
 @import "./variables";
 .screen{
   height: 100vh;
-  width: 100vw;
+  margin-top: 7vh;
+  width: 100%;
   background: $base-color5;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 .screen-text{
-  margin-top: 2vh;
   font-size: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   height: 10vh;
   color: $base-color2;
   font-family: 'Fredoka One', cursive;
