--- a/src/styles/separate-line.css
+++ b/src/styles/separate-line.css
@@ -1,7 +1,12 @@
 .separate-line {
-  width: 100vw;
+  width: 100%;
   height: 4px;
   background: #F5CB5C;
+}
+
+.separate-line.hidden {
+  background: none;
+  background: #333533;
 }
 
 /*# sourceMappingURL=separate-line.css.map */
