--- a/src/styles/separate-line.scss
+++ b/src/styles/separate-line.scss
@@ -1,6 +1,10 @@
 @import "./variables";
 .separate-line{
-  width: 100vw;
+  width: 100%;
   height: 4px;
   background:$base-color3;
+}
+.separate-line.hidden{
+  background: none;
+  background:$base-color5;
 }
