--- a/src/styles/contacts.css
+++ b/src/styles/contacts.css
@@ -1,3 +1,89 @@
+.contacts-zone {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1vh;
+  justify-content: flex-start;
+  align-items: center;
+  height: 85vh;
+  width: 90vw;
+  border-radius: 15px;
+}
 
+.contacts-header {
+  padding-top: 2vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  font-size: 4rem;
+  height: 15vh;
+  width: 100vw;
+  font-family: "Fredoka One", cursive;
+  color: #E8EDDF;
+}
+
+.contacts-text {
+  margin-top: 7.5vh;
+  white-space: pre-wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 2.3rem;
+  height: 35vh;
+  width: 80%;
+  font-family: "Fredoka One", cursive;
+  outline: 6px solid #242423;
+  color: #242423;
+  line-height: 1.2;
+  background: #F5CB5C;
+  border-radius: 15px;
+}
+
+.email-link {
+  margin-top: 7.5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #F5CB5C;
+  color: #242423;
+  font-size: 3.5rem;
+  border-radius: 10px;
+  text-decoration: none;
+  height: 15vh;
+  width: 25vw;
+  font-family: "Luckiest Guy", cursive;
+  outline: 6px solid #242423;
+  transition: 0.1s;
+}
+
+.email-link:hover {
+  background: #E8EDDF;
+  color: #242423;
+}
+
+.footer {
+  width: 100%;
+  height: 5vh;
+  background: #242423;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  color: #F5CB5C;
+  font-family: "Fredoka One", cursive;
+}
+
+@media screen and (max-width: 1000px) {
+  .contacts-text {
+    font-size: 1.6rem;
+    height: 40vh;
+    width: 95%;
+  }
+  .email-link {
+    height: 10vh;
+    width: 80vw;
+    font-size: 3rem;
+  }
+}
 
 /*# sourceMappingURL=contacts.css.map */
