--- a/src/styles/skill.scss
+++ b/src/styles/skill.scss
@@ -4,11 +4,11 @@
   height: 6vh;
   display: flex;
   align-items: center;
+  padding-left: 25%;
   margin-top:15px;
   font-size: 2rem;
   background:$base-color3;
   color: $base-color4;
-  padding-left: 10px;
   border-radius: 10px;
   font-family: 'Luckiest Guy', cursive;
 
