--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -25,7 +25,7 @@
   }
   .projects{
     flex-direction: column;
-    height: 800px;
+    height: 95vh;
   }
   .projects-text-bottom{
     margin-top: 5vh;
