--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -24,7 +24,7 @@
   }
   .projects {
     flex-direction: column;
-    height: 800px;
+    height: 95vh;
   }
   .projects-text-bottom {
     margin-top: 5vh;
