--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -75,10 +75,12 @@
   }
   .languages-zone{
     width: 100%;
-    margin-bottom: 20px;
+    height: 80vh;
+    margin-bottom: 15vh;
   }
   .skills-zone{
     width: 100%;
-    margin-bottom: 20px;
+    height: 80vh;
+    margin-bottom: 5vh;
   }
 }
