--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -71,11 +71,13 @@
   }
   .languages-zone {
     width: 100%;
-    margin-bottom: 20px;
+    height: 80vh;
+    margin-bottom: 15vh;
   }
   .skills-zone {
     width: 100%;
-    margin-bottom: 20px;
+    height: 80vh;
+    margin-bottom: 5vh;
   }
 }
 
