--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: space-between;
   user-select: none;
+  z-index: 9;
 }
 .header.active{
   top: 0px;
@@ -50,4 +51,60 @@
 }
 .header-link.active{
   width: 250px;
+}
+
+.menu-mobile{
+  display: none;
+}
+.menu-mobile-list{
+  display: none;
+}
+
+@media screen and (max-width: 1000px) {
+
+  .menu-mobile{
+    display: flex;
+    height: 48px;
+    width: 48px;
+    background-image: url("../assets/menu-mobile.png");
+    margin-right: 15px;
+    transition: 0.3s;
+    z-index: 9;
+  }
+  .menu-mobile.active{
+    transform: rotate(90deg);
+  }
+  .header-links{
+    display: none;
+  }
+  .menu-mobile-list{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: fixed;
+    height: 100vh;
+    width:100%;
+    background:$base-color4;
+    top:0;
+    right:-100%;
+    max-width:400px;
+    padding: 60px 50px 100px 50px;
+    transition: 0.22s;
+    z-index: 8;
+
+  }
+  .menu-mobile-list.active{
+    top:0;
+    right:0;
+  }
+  .header-link{
+    margin: 10% 0px 10% 0px;
+    width: 90%;
+    height: 10%;
+    font-size: 2.5rem;
+  }
+
+
+
+
 }
