--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -24,6 +24,7 @@
   background:rgba($base-color4,0.97);
   outline: 3px solid $base-color3;
   font-family: 'Luckiest Guy', cursive;
+  z-index: 1;
 }
 
 .project1:hover{
