--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -86,6 +86,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     position: fixed;
     height: 100vh;
     width: 100%;
@@ -93,7 +94,7 @@
     top: 0;
     right: -100%;
     max-width: 400px;
-    padding: 60px 50px 100px 50px;
+    padding: 40px 50px 100px 50px;
     transition: 0.22s;
     z-index: 8;
   }
