--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -81,6 +81,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     position: fixed;
     height: 100vh;
     width:100%;
@@ -88,7 +89,7 @@
     top:0;
     right:-100%;
     max-width:400px;
-    padding: 60px 50px 100px 50px;
+    padding: 40px 50px 100px 50px;
     transition: 0.22s;
     z-index: 8;
 
