--- a/src/styles/language.css
+++ b/src/styles/language.css
@@ -20,7 +20,6 @@
 }
 
 .language-level {
-  margin-left: 10px;
   aspect-ratio: 1/1;
   display: flex;
   align-items: center;
@@ -31,6 +30,7 @@
   font-family: "Luckiest Guy", cursive;
   background: #242423;
   color: #E8EDDF;
+  margin: auto auto auto 10px;
 }
 
 @media screen and (max-width: 1000px) {
