--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -23,7 +23,7 @@
   height: 100%;
   background: rgba(36, 36, 35, 0.97);
   outline: 3px solid #F5CB5C;
-  font-family: "Luckiest Guy", cursive;
+  font-family: "Fredoka One", cursive;
   z-index: 1;
 }
 
