--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -23,7 +23,7 @@
   height: 100%;
   background:rgba($base-color4,0.97);
   outline: 3px solid $base-color3;
-  font-family: 'Luckiest Guy', cursive;
+  font-family: "Fredoka One", cursive;
   z-index: 1;
 }
 
