--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -47,12 +47,12 @@
   align-items: center;
   background:$base-color3;
   color:$base-color4;
-  font-size: 3.5rem;
+  font-size: 4rem;
   border-radius: 10px;
   text-decoration: none;
   height: 15vh;
   width: 25vw;
-  font-family: "Luckiest Guy", cursive;
+  font-family: "Fredoka One", cursive;
   outline: 6px solid $base-color4;
   transition: 0.1s;
 }
