--- a/src/styles/experience.scss
+++ b/src/styles/experience.scss
@@ -17,6 +17,7 @@
   color:$base-color2;
 
 
+
 }
 .skills-text{
   display: flex;
@@ -25,7 +26,7 @@
   font-size: 3rem;
   color:$base-color2;
   margin-bottom: 20px;
-  font-family: 'Fredoka One', cursive;
+  font-family: "Fredoka One", cursive;
 }
 .languages{
   display: flex;
@@ -40,7 +41,7 @@
   font-size: 3rem;
   justify-content: center;
   color:$base-color2;
-  font-family: 'Fredoka One', cursive;
+  font-family: "Fredoka One", cursive;
 }
 
 .skills-zone{
