--- a/src/styles/first-screen.scss
+++ b/src/styles/first-screen.scss
@@ -38,7 +38,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: 'Luckiest Guy', cursive;
+  font-family: "Fredoka One", cursive;
   color:$base-color1;
 }
 @media screen and (max-width: 1000px) {
