--- a/src/styles/language.scss
+++ b/src/styles/language.scss
@@ -8,17 +8,18 @@
   margin-top: 20px;
   border-radius: 10px;
   background:$base-color3;
+  padding-left: 15%;
 }
 .language-txt{
   height: 100%;
   display: flex;
   align-items: center;
-  font-family: 'Luckiest Guy', cursive;
+  font-family: "Fredoka One", cursive;
   color:$base-color4;
 
 
-  width: 40%;
-  font-size: 1.75rem;
+  width: 70%;
+  font-size: 2.25rem;
 }
 .language-level{
   aspect-ratio: 1/1;
@@ -26,9 +27,9 @@
   align-items: center;
   justify-content: center;
   width: 5vh;
-  font-size: 1.75rem;
+  font-size: 1.7rem;
   border-radius: 50%;
-  font-family: 'Luckiest Guy', cursive;
+  font-family: "Fredoka One", cursive;
   background:$base-color4;
   color:$base-color2;
   margin: auto auto auto 10px;
