--- a/src/styles/skill.css
+++ b/src/styles/skill.css
@@ -3,13 +3,13 @@
   height: 6vh;
   display: flex;
   align-items: center;
-  padding-left: 25%;
+  padding-left: 15%;
   margin-top: 15px;
-  font-size: 2rem;
+  font-size: 2.25rem;
   background: #F5CB5C;
   color: #242423;
   border-radius: 10px;
-  font-family: "Luckiest Guy", cursive;
+  font-family: "Fredoka One", cursive;
 }
 
 @media screen and (max-width: 1000px) {
