--- a/src/styles/skill.scss
+++ b/src/styles/skill.scss
@@ -4,13 +4,13 @@
   height: 6vh;
   display: flex;
   align-items: center;
-  padding-left: 25%;
+  padding-left: 15%;
   margin-top:15px;
-  font-size: 2rem;
+  font-size: 2.25rem;
   background:$base-color3;
   color: $base-color4;
   border-radius: 10px;
-  font-family: 'Luckiest Guy', cursive;
+  font-family: "Fredoka One", cursive;
 
 }
 
