--- a/src/styles/about-me.css
+++ b/src/styles/about-me.css
@@ -10,8 +10,6 @@
 }
 
 .about-me-txt {
-  margin: 10px;
-  padding: 10px;
   font-size: 2.5rem;
   color: #CFDBD5;
   outline: 3px solid #F5CB5C;
@@ -21,6 +19,12 @@
   background: #242423;
   font-family: "Amaranth", sans-serif;
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  white-space: pre-wrap;
+  line-height: 1.2;
+  text-align: justify;
+  display: flex;
+  align-items: center;
+  padding: 2% 5% 5% 5%;
 }
 
 .about-me-photo {
@@ -61,7 +65,7 @@
   .about-me-txt {
     width: 90%;
     height: 50%;
-    font-size: 1.25rem;
+    font-size: 1.35rem;
   }
 }
 
