--- a/src/styles/about-me.scss
+++ b/src/styles/about-me.scss
@@ -12,8 +12,6 @@
 
 }
 .about-me-txt{
-  margin: 10px;
-  padding: 10px;
   font-size: 2.5rem;
   color:$base-color1;
   outline: 3px solid $base-color3;
@@ -23,6 +21,12 @@
   background:$base-color4;
   font-family: 'Amaranth', sans-serif;
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
+  white-space: pre-wrap;
+  line-height: 1.2;
+  text-align: justify;
+  display: flex;
+  align-items: center;
+  padding: 2% 5% 5% 5%;
 
 }
 
@@ -64,7 +68,7 @@
   .about-me-txt{
     width: 90%;
     height: 50%;
-    font-size: 1.25rem;
+    font-size: 1.35rem;
 
   }
 
