--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -8,6 +8,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  z-index: 4;
 }
 .project1{
   display: flex;
