--- a/src/styles/about-me.css
+++ b/src/styles/about-me.css
@@ -7,10 +7,11 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  container-type: inline-size;
 }
 
 .about-me-txt {
-  font-size: 2.25rem;
+  font-size: 3cqi;
   color: #CFDBD5;
   outline: 3px solid #F5CB5C;
   border-radius: 10px;
