--- a/src/styles/about-me.scss
+++ b/src/styles/about-me.scss
@@ -2,7 +2,7 @@
 
 .about-me{
   margin-top: 2vh;
-  width: 80vw;
+  width: 90vw;
   height: 70vh;
   color:$base-color4;
   display: flex;
@@ -24,10 +24,10 @@
   box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
   white-space: pre-wrap;
   line-height: 1.2;
+  align-items: center;
   text-align: justify;
   display: flex;
-  align-items: center;
-  padding: 2% 5% 5% 5%;
+  padding: 3% 5% 5% 5%;
 
 }
 
@@ -69,8 +69,8 @@
   .about-me-txt{
     width: 90%;
     height: 50%;
-    font-size: 1.3rem;
-
+    font-size: 2.8cqb;
+    padding: 2%;
   }
 
 
