--- a/src/styles/contacts.css
+++ b/src/styles/contacts.css
@@ -7,6 +7,7 @@
   height: 85vh;
   width: 90vw;
   border-radius: 15px;
+  container-type: inline-size;
 }
 
 .contacts-header {
@@ -28,7 +29,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-size: 2.3rem;
+  font-size: 5cqb;
   height: 35vh;
   width: 80%;
   font-family: "Fredoka One", cursive;
