--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -24,7 +24,9 @@
   width: 50px;
   border-radius: 50%;
   margin-left: 15px;
-  background-image: url("../assets/logo-header.png");
+  background-image: url("../assets/logo350x350.png");
+  background-size: cover;
+
 }
 .header-links{
   height: 150px;
