--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -1,10 +1,14 @@
 .projects {
-  height: 65vh;
+  height: 50vh;
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 100vw;
   justify-content: center;
+}
+
+.screen.proj {
+  height: 120vh;
 }
 
 .projects-text-bottom {
